# rankify

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
.zed/: debug.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260428_01_mvp_schema.py  20260506_01_category_versioning.py
backend/rankify/: __init__.py  auth.py  config.py  database.py  logging.py  main.py  observability.py  schemas.py  seed.py  telemetry.py
backend/rankify/db/: __init__.py  models.py
backend/rankify/routes/: __init__.py  admin.py  categories.py  health.py  rankings.py
backend/tests/: conftest.py  test_admin.py  test_health.py  test_rankings.py
frontend/: .env.example  Caddyfile  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.ts  App.vue  main.ts  style.css
frontend/src/components/: AdminPanel.vue  CommunityRankingPanel.vue  PublicRankingSection.vue
infra/: README.md
